app/nginx/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: poc-multicluster
  annotations:
    nginx.ingress.kubernetes.io/server-alias: ~^.*\.poc-multicluster\.totvs\.dev$
  #   kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
