app/nginx/base/nginx-deploy.yaml
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: poc-multicluster

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: poc-multicluster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: poc-multicluster
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: poc-multicluster
  # annotations:
  #   nginx.ingress.kubernetes.io/server-alias: ~^*\.poc-multicluster\.totvs\.dev$
  #   kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
